// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render 1`] = `
<div
  className="form__ group form__group--checkbox--test"
>
  <label
    className="form__label"
    htmlFor="test"
  >
    test
  </label>
  <input
    checked={true}
    className="form__checkbox"
    name="test"
    onChange={[Function]}
    type="checkbox"
    value={true}
  />
</div>
`;

exports[`test Should render 1`] = `
<div
  className="form__ group form__group--checkbox--test">
  <label
    className="form__label"
    htmlFor="test">
    test
  </label>
  <input
    checked={true}
    className="form__checkbox"
    name="test"
    onChange={[Function]}
    type="checkbox"
    value={true} />
</div>
`;
